Issue #1: Implemented sink API for fetching
commit 2ef67481a267ea6c4f8433812149df7dfd569076
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Mon Aug 21 13:04:48 2023 +0200

    Issue #1: Composer updated. changelog added

commit 44bf32995c7dd04c1aa66b6a64370d9713169e17
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Mon Aug 21 12:55:22 2023 +0200

    Issue #1: Remove irrelevant stuff from ConsatFiles

commit 3af27eabe17171444f31f09c0c0cf6b74d488a80
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Mon Aug 21 12:43:02 2023 +0200

    Issue #1: Narrowed scope of ConsatHistoric to ConsatFiles

commit a91b59e860130b76f109ffa79e0575d8378dc37c
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Mon Aug 21 12:39:04 2023 +0200

    Issue #1: Remove un-used methods

commit b1c9129c369b1d8a96e1bcaf270c367bdf8d37df
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Thu Aug 10 12:23:22 2023 +0200

    Issue #1: Catch exception from file manager

commit 69e19f0e655b0c44c5a8b4ea8b08987831b6e1e5
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Wed Aug 9 13:55:26 2023 +0200

    Issue #1: SSH file system config tuning

commit 2b25e284ba3463b018114957153f118dea72516f
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Tue Aug 8 14:34:11 2023 +0200

    Issue #1: Implemented basic fetch functionality. Non-working

commit 0de19a8adbd81ac14e2765dacd233cffacd26e9d
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Fri Jun 30 10:32:52 2023 +0200

    Issue #1: Keep up with api changes

commit ed48b1e7d0edcfa2eeeae54102d03c8c72ec0b99
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Fri Jun 23 14:46:23 2023 +0200

    Issue #1: Removed code now in RagnarokSink

commit 4a50a6533815e6527f4405784d9780d83e0d5b9e
Author: Kåre Slettnes <kaare.slettnes@tffk.no>
Date:   Thu Jun 22 10:21:04 2023 +0200

    Issue #1: Moved and renamed stuff from fuse.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "illuminate/console": "^10.0",
         "illuminate/database": "^10.0",
         "illuminate/support": "^10.0",
+        "league/flysystem-sftp-v3": "^3.15",
         "tromsfylkestrafikk/ragnarok-sink": "dev-main"
     },
     "require-dev": {
@@ -43,8 +44,8 @@
     },
     "repositories": [
         {
-            "type": "path",
-            "url": "../ragnarok-sink"
+            "type": "github",
+            "url": "https://github.com/TromsFylkestrafikk/ragnarok-sink"
         }
     ],
     "extra": {
