Issue #8: Shorten service provider name

--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Ragnarok\\Consat\\RagnarokConsatServiceProvider"
+                "Ragnarok\\Consat\\ConsatServiceProvider"
             ]
         }
     }
