--- a/composer.json
+++ b/composer.json
@@ -8,27 +8,26 @@
     "authors": [
         {
             "name": "Kåre Slettnes",
-            "email": "kaare.slettnes@tffk.no"
+            "email": "kaare.slettnes@tromsfylke.no"
         }
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.0",
+        "php": "^8.3",
         "gemorroj/archive7z": "^5.6",
-        "illuminate/console": "^10.0",
-        "illuminate/database": "^10.0",
-        "illuminate/support": "^10.0",
-        "league/flysystem-sftp-v3": "^3.15",
+        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "league/flysystem-sftp-v3": "^3.29",
         "ragnarok/sink": "dev-main"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.6",
+        "squizlabs/php_codesniffer": "^3.7",
         "phpmd/phpmd": "@stable",
-        "phpstan/phpstan": "^1.10",
-        "nunomaduro/larastan": "^2.6",
-        "orchestra/testbench": "^8.5",
-        "orchestra/canvas": "^8.1"
+        "phpstan/phpstan": "^2.1.14",
+        "larastan/larastan": "^3.4",
+        "orchestra/testbench": "^10.2",
+        "orchestra/canvas": "^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +36,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Ragnarok\\Consat\\Tests\\":"tests/"
+            "Ragnarok\\Consat\\Tests\\": "tests/"
         }
     },
     "config": {
